# emuvlm

./: .gitignore  CLAUDE.md  CONFIG_DRIVEN_AGENTS.md  FINDINGS.md  LICENSE  MAC_COMPATIBILITY.md  PLAN.md  POKEMON_IMPROVEMENTS.md  README.md  TODO.md  WSL_COMPATIBILITY.md  WSL_SETUP_INSTRUCTIONS.md  config.yaml  conftest.py  demo_game.py  install_emulators.sh  monitor_game.py  play_game.py  pyproject.toml  requirements.txt  setup_wsl.sh  test_cli_commands.py  test_emulators.py  test_mac_compatibility.sh  test_model.py  test_pokemon_updated.sh
emulators/: __init__.py  base.py  mgba_emulator.py  pyboy_emulator.py
emuvlm/: __init__.py  cli.py  config.yaml  constants.py  demo_game.py  monitor.py  play.py  start_llama_server.sh  start_vllm_server.sh  test_emulators.py  test_llama.py  test_model.py
examples/: advance_wars_2_gba.yaml  advance_wars_gba.yaml  azure_dreams_ps1.yaml  breath_of_fire_ii_snes.yaml  breath_of_fire_snes.yaml  chrono_trigger_snes.yaml  dragon_warrior_ii_nes.yaml  dragon_warrior_iii_nes.yaml  dragon_warrior_iv_nes.yaml  dragon_warrior_monsters_gbc.yaml  dragon_warrior_nes.yaml  earthbound_snes.yaml  final_fantasy_iv_snes.yaml  final_fantasy_legend_gb.yaml  final_fantasy_legend_ii_gb.yaml  final_fantasy_legend_iii_gb.yaml  final_fantasy_mystic_quest_snes.yaml  final_fantasy_nes.yaml  final_fantasy_tactics_advance_gba.yaml  final_fantasy_vi_snes.yaml  final_fantasy_vii_ps1.yaml  fire_emblem_gba.yaml  fire_emblem_sacred_stones_gba.yaml  front_mission_snes.yaml  golden_sun_gba.yaml  golden_sun_lost_age_gba.yaml  legend_of_dragoon_ps1.yaml  mario_land.yaml  (+28 more)
(+35 files in other folders)
